tests/baselines/reference/subtypesOfTypeParameterWithConstraints4.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(47,5): error TS2416: Class member of type 'V' is not assignable to base class member of type 'Foo'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(47,5): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'Foo'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(57,5): error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
  Type 'Foo' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(57,5): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(62,5): error TS2416: Class member of type 'V' is not assignable to base class member of type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(62,5): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(67,5): error TS2416: Class member of type 'T' is not assignable to base class member of type 'U'.
  Type 'Foo' is not assignable to type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(67,5): error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(77,5): error TS2416: Class member of type 'V' is not assignable to base class member of type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts(77,5): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithConstraints4.ts (10 errors) ====
    // checking whether other types are subtypes of type parameters with constraints
    
    class Foo { foo: number; }
    function f<T extends Foo, U extends Foo, V>(t: T, u: U, v: V) {
        // ok
        var r = true ? t : u;
        var r = true ? u : t;
    
        // ok
        var r2 = true ? t : v;
        var r2 = true ? v : t;
    
        // ok
        var r3 = true ? v : u;
        var r3 = true ? u : v;
    
        // ok
        var r4 = true ? t : new Foo();
        var r4 = true ? new Foo() : t;
    
        // ok
        var r5 = true ? u : new Foo();
        var r5 = true ? new Foo() : u;
    
        // ok
        var r6 = true ? v : new Foo();
        var r6 = true ? new Foo() : v;
    
    }
    
    class B1<T> {
        foo: T;
    }
    
    class D1<T extends Foo, U extends Foo, V> extends B1<Foo> {
        [x: string]: Foo;
        foo: T; // ok
    }
    
    class D2<T extends Foo, U extends Foo, V> extends B1<Foo> {
        [x: string]: Foo;
        foo: U; // ok
    }
    
    class D3<T extends Foo, U extends Foo, V> extends B1<Foo> {
        [x: string]: Foo;
        foo: V; // error
        ~~~
!!! error TS2416: Class member of type 'V' is not assignable to base class member of type 'Foo'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'Foo'.
    }
    
    class D4<T extends Foo, U extends Foo, V> extends B1<T> {
        [x: string]: T;
        foo: T; // ok
    }
    
    class D5<T extends Foo, U extends Foo, V> extends B1<T> {
        [x: string]: T;
        foo: U; // error
        ~~~
!!! error TS2416: Class member of type 'U' is not assignable to base class member of type 'T'.
!!! error TS2416:   Type 'Foo' is not assignable to type 'T'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
    }
    
    class D6<T extends Foo, U extends Foo, V> extends B1<T> {
        [x: string]: T;
        foo: V; // error
        ~~~
!!! error TS2416: Class member of type 'V' is not assignable to base class member of type 'T'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
    }
    
    class D7<T extends Foo, U extends Foo, V> extends B1<U> {
        [x: string]: U;
        foo: T; // error
        ~~~
!!! error TS2416: Class member of type 'T' is not assignable to base class member of type 'U'.
!!! error TS2416:   Type 'Foo' is not assignable to type 'U'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'U'.
    }
    
    class D8<T extends Foo, U extends Foo, V> extends B1<U> {
        [x: string]: U;
        foo: U; // ok
    }
    
    class D9<T extends Foo, U extends Foo, V> extends B1<U> {
        [x: string]: U;
        foo: V; // error
        ~~~
!!! error TS2416: Class member of type 'V' is not assignable to base class member of type 'U'.
        ~~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
    }